--- a/package.json
+++ b/package.json
@@ -10,18 +10,29 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.24.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/bottom-tabs": "6.5.8",
+    "@react-native/babel-preset": "^0.75.0-main",
+    "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "6.6.3",
-    "@react-navigation/native": "6.1.7",
+    "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "6.9.13",
     "@react-navigation/stack": "6.3.17",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-biometrics": "^3.0.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-paper": "^5.12.3",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-svg": "^15.1.0",
+    "react-native-vector-icons": "^10.0.3",
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
