--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-svg": "^15.1.0",
+    "react-native-touch-id": "^4.4.1",
     "react-native-vector-icons": "^10.0.3",
     "styled-components": "^6.0.7"
   },
